[project]
name = "diffusiontest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
      "diffusers[torch]>=0.37.0",
      "numpy>=2.4.2",
      "polars>=1.38.1",
      "torch>=2.9.1",
      "transformers>=5.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
